test/valid/if.js
if (false) { 1; } else { false; }

function f(x,y) {
    if (x) { y = 1; } else { return 4; }
    return 2;
}

