test/invalid/builtins/plus-func.js
function f(x,y) { return x + y; }

f(2,'a');

